[project]
name = "llama3-tukau"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "taisan", email = "131413638+taisan11@users.noreply.github.com" }
]
dependencies = [
    "ollama>=0.1.8",
    "langchain>=0.1.16",
    "langchain-community>=0.0.34",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/llama3_tukau"]
